# steel-thread

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  FILE_LOCATIONS.md  LEARNING.md  PLAN.md  QUICKSTART.md  README.md  TESTING.md  bacon.toml  justfile  main.tf
.claude/: settings.json  settings.local.json
.claude/skills/platerator-api/: .api-hash  SKILL.md
.github/workflows/: build.yml  ci.yml
crates/: README.md
crates/domain/: Cargo.toml  FIELD_CHANGES.md
crates/domain/src/: lib.rs
crates/parametric/: Cargo.toml  README.md
crates/parametric/src/: lib.rs  main.kcl  plate.kcl
crates/validation/: Cargo.toml  PLAN.md  README.md
crates/validation/src/: lib.rs  wasm.rs
crates/web/: Cargo.toml  build.rs
crates/web/src/: app.rs  cache.rs  cache_aws.rs  cache_local.rs  cache_memory.rs  lib.rs  main.rs  theme.rs
crates/web/src/components/: mod.rs  plate_form.rs  response_panel.rs  theme_switcher.rs
crates/web/src/static/: index.html
crates/web/style/: main.css
crates/web/tests/: api_tests.rs
docs/: ORDER_QUEUE_ARCHITECTURE.md
frontend/: CLAUDE.md  README.md  build.ts  bun-env.d.ts  package.json  playwright.config.ts
frontend/e2e/: generate.spec.ts
frontend/public/: default-model.gltf
frontend/src/: APITester.tsx  App.tsx  frontend.tsx  index.css  index.html  index.ts
frontend/src/components/: about-section.tsx  model-viewer.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  select.tsx  theme-picker.tsx
frontend/src/lib/: validation.ts
frontend/src/lib/theme/: config.ts  context.tsx  index.ts  types.ts
frontend/styles/: globals.css
frontend/styles/themes/: blue.css  cyber.css  green.css  neutral.css  rose.css
scripts/: check-api-sync.sh  post-edit-checks.sh
terraform/: .gitignore  README.md  main.tf  outputs.tf  platerator.tfplan  terraform.tfvars.example  variables.tf
terraform/modules/app_runner/: main.tf  outputs.tf  variables.tf
terraform/modules/cloudwatch/: main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/lightsail/: main.tf  outputs.tf  user_data.sh  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  variables.tf
terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
