[package]
name = "domain"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
utoipa = { version = "5.3", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }

[features]
default = []
openapi = ["utoipa", "sha2", "hex"]
