[package]
name = "validation"
version = "0.1.0"
edition = "2021"
description = "Shared validation logic for actuator plate parameters (no_std compatible, works in Rust and WebAssembly)"
repository = "https://github.com/chrisbodhi/steel-thread"
license = "MIT OR Apache-2.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
# Support both native Rust library and WASM
crate-type = ["rlib", "cdylib"]

[dependencies]
domain = { path = "../domain" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
