[package]
name = "web"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8", features = [ "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1.42", features = [ "full" ] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "web"
path = "src/main.rs"
