[package]
name = "web"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8", features = [ "json" ], optional = true }
console_error_panic_hook = "0.1"
domain = { path = "../domain" }
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1.42", features = [ "full" ], optional = true }
leptos = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
validation = { path = "../validation" }
wasm-bindgen = "0.2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1.42", features = ["full"] }
http-body-util = "0.1"
serde_json = "1.0"

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_axum/default",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber"
]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "web"
path = "src/main.rs"
required-features = ["ssr"]
